# RepoPilot_Agent

./: README.md  RepoPilot-开发文档.md  RepoPilot-项目设计文档.md  pyproject.toml
repopilot/: __init__.py
repopilot/agents/: __init__.py  coder.py  planner.py  reviewer.py
repopilot/app/: __init__.py  logging.py  main.py  orchestrator.py  state_machine.py
repopilot/core/: __init__.py  contract_validator.py  impact_analyzer.py  local_retriever.py  recovery_manager.py  repo_instructions.py  repo_mapper.py  retrieval_decider.py
repopilot/models/: __init__.py  codex.py  llm.py  ollama.py
repopilot/schemas/: contract.py  edit.py  enums.py  impact.py  local_retrieval.py  plan.py  recovery.py  repo_map.py  retrieval.py  review.py  run_context.py  task.py  tool.py
repopilot/tools/: __init__.py  file_tools.py  git_tools.py  safety_guard.py  search_tools.py  test_runner.py  tool_registry.py
tests/: test_recovery_manager.py
